<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_swimming"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_completed"
            android:icon="@drawable/ic_completed_24"
            android:title="@string/menu_completed"/>
        <item
            android:id="@+id/nav_theory"
            android:icon="@drawable/ic_book"
            android:title="@string/menu_theory" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_user_detail"
            android:title="@string/menu_profile"/>

        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_exit_24"
            android:title="@string/menu_exit"/>
    </group>
</menu>