<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/indent_edge_screen">
    <!--Hi-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="94"

        android:gravity="center|bottom">
        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/item_bubble_box"
            android:gravity="center">
                <TextView
                    style="@style/textBtn"
                    android:textSize="70dp"
                    android:text="Hi"/>
        </LinearLayout>
    </LinearLayout>
    <!--SwimSvyter-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="120"
        android:gravity="center|bottom">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textHeader"
            android:text="@string/app_name"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/big_text"/>
    </LinearLayout>
    <!--Comment-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:id="@+id/login_comment_txt"
            style="@style/text.accent"
            android:textAlignment="center"
            android:text="@string/auth_comment"/>
    </LinearLayout>

    <!--Login form-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="100"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <EditText
            android:id="@+id/login_login_edit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_width"
            android:background="@drawable/edit_field_with_color_selector"
            android:paddingHorizontal="@dimen/medium_indent_from_box"
            android:paddingVertical="@dimen/small_indent_text_in_box"
            android:hint="@string/hint_login"
            android:inputType="text"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/login_pass_edit"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_width"
                android:background="@drawable/edit_field_with_color_selector"
                android:layout_marginTop="@dimen/high_indent_from_box"
                android:paddingVertical="@dimen/small_indent_text_in_box"
                android:paddingLeft="@dimen/medium_indent_text_in_box"
                android:paddingRight="@dimen/very_big_indent"
                android:hint="@string/hint_pass"
                android:inputType="textPassword">
            </EditText>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/login_eye_cl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/high_indent_from_box"
                android:clickable="false">
                <LinearLayout
                    android:id="@+id/login_eye_ll"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:clickable="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:paddingRight="10dp">
                <ImageView
                    android:id="@+id/login_eye_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_eye_off"
                    android:clickable="true" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>


    </LinearLayout>
    <!--Forget No get? :)-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingTop="@dimen/small_indent_text_in_box">
        <TextView
            android:id="@+id/login_forget_pass_txt"
            style="@style/text.noAccent"
            android:text="@string/forget_pass"
            android:paddingRight="@dimen/small_indent_text_in_box"/>
    </LinearLayout>
    <!--Login btn-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="130"
        android:gravity="bottom"
        android:clickable="false">
        <LinearLayout
            android:id="@+id/login_log_in_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_width"
            style="@style/btn"
            android:clickable="true"
            android:focusable="false">
            <TextView
                style="@style/textBtn"
                android:text="@string/log_in"
                android:clickable="false"/>
        </LinearLayout>
    </LinearLayout>
    <!--Sing Up link-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="@dimen/medium_indent_from_box"
        android:gravity="center"
        android:clickable="false">
        <TextView
            style="@style/text"
            android:text="@string/reg_account_txt"/>
        <TextView
            android:id="@+id/login_link_sing_up_txt"
            style="@style/text"
            android:text="@string/sing_up"
            android:textColor="?attr/colorPrimary"
            android:paddingLeft="@dimen/small_indent_text_in_box"
            android:clickable="true"/>
    </LinearLayout>

</LinearLayout>