<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/indent_edge_screen">
    <!--Hi-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="130.95"
        android:gravity="center|bottom">
        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/item_bubble_box"
            android:gravity="center">
            <TextView
                style="@style/textBtn"
                android:textSize="70dp"
                android:text="Hi"/>
        </LinearLayout>
    </LinearLayout>
    <!--SwimSvyter-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="180"
        android:gravity="center|bottom">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textHeader"
            android:text="SwimSvyter"
            android:textColor="?attr/colorPrimary"
            android:textSize="@dimen/big_text"/>
    </LinearLayout>
    <!--Comment-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="180"
        android:gravity="center|top">
        <TextView
            android:id="@+id/login_comment_txt"
            style="@style/text.accent"
            android:textAlignment="center"
            android:text="@string/auth_comment"/>
    </LinearLayout>
    <!--Reg form-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <!--login-->
        <EditText
            android:id="@+id/reg_login_edit"
            style="@style/colorEditor"
            android:hint="@string/hint_login"
            android:inputType="text" />
        <!--email-->
        <EditText
            android:id="@+id/reg_email_edit"
            style="@style/colorEditor"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"/>
        <!--pass-->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/reg_pass_edit"
                style="@style/colorEditor"
                android:paddingRight="@dimen/very_big_indent"
                android:hint="@string/hint_pass"
                android:inputType="textPassword">
            </EditText>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/reg_eye_cl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/high_indent_from_box"
                android:clickable="false">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:paddingEnd="@dimen/medium_indent_from_box"
                    android:clickable="true">
                    <ImageView
                        android:id="@+id/reg_eye_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_eye_off"
                        android:clickable="true" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>
        <!--repeat pass-->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/reg_pass_edit_repeat"
                style="@style/colorEditor"
                android:paddingRight="@dimen/very_big_indent"
                android:hint="@string/hint_pass_repeat"
                android:inputType="textPassword">
            </EditText>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/reg_eye_cl_repeat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/high_indent_from_box"
                android:clickable="false">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:paddingRight="@dimen/medium_indent_from_box"
                    android:clickable="true">
                    <ImageView
                        android:id="@+id/reg_eye_img_repeat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_eye_off"
                        android:clickable="true" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>
        <!--сonfidentiality-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/small_indent_from_box">
            <CheckBox
                android:id="@+id/reg_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:buttonTint="@color/purple_500"/>
            <TextView
                style="@style/text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/reg_confidentiality"/>
        </LinearLayout>

    </LinearLayout>
    <!--Reg btn-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="185"
        android:gravity="bottom"
        android:clickable="false">
        <LinearLayout
            android:id="@+id/reg_create_account_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_width"
            style="@style/btn"
            android:clickable="true">
            <TextView
                style="@style/textBtn"
                android:text="@string/reg_btn"
                android:clickable="false"/>
        </LinearLayout>
    </LinearLayout>
    <!--Sing In link-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="190"
        android:gravity="center"
        android:clickable="false">
        <TextView
            style="@style/text"
            android:text="@string/reg_have_account"/>
        <TextView
            android:id="@+id/reg_link_sign_in_txt"
            style="@style/text"
            android:text="@string/sing_in"
            android:textColor="?attr/colorPrimary"
            android:paddingLeft="@dimen/small_indent_text_in_box"
            android:clickable="true"/>
    </LinearLayout>

</LinearLayout>